# dbnest

./: CHANGELOG.md  Cargo.toml  README.md
crates/dbnest-cli/: Cargo.toml  README.md
crates/dbnest-cli/src/: cli.rs  main.rs
crates/dbnest-cli/src/output/: human.rs  json.rs  mod.rs
crates/dbnest-core/: Cargo.toml  README.md
crates/dbnest-core/src/: error.rs  ids.rs  instance_ops.rs  lib.rs  paths.rs
crates/dbnest-core/src/engine/: mod.rs  types.rs
crates/dbnest-core/src/instance/: mod.rs  model.rs  registry.rs  status.rs  status_report.rs
crates/dbnest-core/src/runtime/docker/: detect.rs  mod.rs  postgres.rs  util.rs
crates/dbnest-core/src/schema/: mod.rs  model.rs  validate.rs
crates/dbnest-core/src/schema/apply/: mod.rs  postgres.rs  sqlite.rs
crates/dbnest-core/src/schema/load/: dir_layout.rs  json_file.rs  mod.rs
crates/dbnest-core/src/schema/plan/: mod.rs  sql.rs
crates/dbnest-core/src/schema/plan/generators/: mod.rs  postgres.rs  sqlite.rs
crates/dbnest-core/src/sqlite/: embedded.rs  mod.rs
crates/dbnest-core/tests/: plan_tests.rs  registry.rs  schema_load.rs  sqlite_apply.rs  status.rs  up_schema_rollback.rs
crates/dbnest-core/tests/common/: docker.rs
examples/: schema.json
examples/schema_dir/books/: columns.json
examples/schema_dir/users/: columns.json
