[package]
name = "dbnest"
version = "0.1.1"
edition = "2024"
license = "MIT"
description = "dbnest CLI – cozy local databases in seconds"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dbnest-core = { path = "../dbnest-core" }
# dbnest-core = "0.0.2"
