[package]
name = "dbnest-core"
version = "0.0.1"
edition = "2024"
license = "MIT"
description = "Internal core engine, docs to be written in future"
repository = "https://github.com/BitrixStudio/dbnest/crates/dbnest-core"

[dependencies]
anyhow = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
time = { version = "0.3", features = ["serde", "formatting"] }
directories = "5"
fs2 = "0.4"
rusqlite = { version = "0.32", features = ["bundled"] }
walkdir = "2"